[gd_scene load_steps=69 format=2]

[ext_resource path="res://Maze.gd" type="Script" id=1]
[ext_resource path="res://Graphics/road-tiles.png" type="Texture" id=2]
[ext_resource path="res://Graphics/finish_flag.png" type="Texture" id=3]
[ext_resource path="res://Graphics/green_flag.png" type="Texture" id=4]
[ext_resource path="res://SpaceInvader.tscn" type="PackedScene" id=5]

[sub_resource type="NavigationPolygon" id=63]
vertices = PoolVector2Array( 24, 0, 24, 0, 32, 0, 32, 32, 64, 32, 64, 40, 32, 40, 32, 64, 40, 64, 24, 64, 24, 40, 0, 40, 0, 32, 24, 32 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ) ]

[sub_resource type="ConvexPolygonShape2D" id=69]
points = PoolVector2Array( 64, 32, 32, 32, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=70]
points = PoolVector2Array( 0, 0, 24, 0, 24, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=71]
points = PoolVector2Array( 64, 64, 32, 64, 32, 40, 64, 40 )

[sub_resource type="ConvexPolygonShape2D" id=72]
points = PoolVector2Array( 24, 40, 24, 40, 24, 40, 24, 64, 0, 64, 0, 40 )

[sub_resource type="NavigationPolygon" id=37]
vertices = PoolVector2Array( 0, 32, 0, 32, 64, 32, 64, 40, 32, 40, 32, 64, 24, 64, 24, 40, 0, 40 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ) ]

[sub_resource type="ConvexPolygonShape2D" id=73]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=74]
points = PoolVector2Array( 64, 64, 32, 64, 32, 40, 64, 40 )

[sub_resource type="ConvexPolygonShape2D" id=75]
points = PoolVector2Array( 0, 40, 24, 40, 24, 64, 0, 64 )

[sub_resource type="NavigationPolygon" id=45]
vertices = PoolVector2Array( 24, 0, 24, 0, 32, 0, 32, 64, 24, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ) ]

[sub_resource type="ConvexPolygonShape2D" id=94]
points = PoolVector2Array( 0, 0, 24, 0, 24, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=95]
points = PoolVector2Array( 64, 64, 32, 64, 32, 0, 64, 0 )

[sub_resource type="NavigationPolygon" id=29]
vertices = PoolVector2Array( 24, 24, 24, 24, 32, 24, 32, 64, 24, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ) ]

[sub_resource type="ConvexPolygonShape2D" id=96]
points = PoolVector2Array( 64, 24, 0, 24, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=97]
points = PoolVector2Array( 64, 64, 32, 64, 32, 32, 64, 32 )

[sub_resource type="ConvexPolygonShape2D" id=98]
points = PoolVector2Array( 0, 32, 24, 32, 24, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=99]
points = PoolVector2Array( 0, 24, 24, 24, 24, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=100]
points = PoolVector2Array( 64, 32, 32, 32, 32, 24, 64, 24 )

[sub_resource type="NavigationPolygon" id=41]
vertices = PoolVector2Array( 24, 0, 24, 0, 32, 0, 32, 32, 64, 32, 64, 40, 24, 40 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6 ) ]

[sub_resource type="ConvexPolygonShape2D" id=101]
points = PoolVector2Array( 64, 32, 32, 32, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=102]
points = PoolVector2Array( 24, 64, 0, 64, 0, 0, 24, 0 )

[sub_resource type="ConvexPolygonShape2D" id=103]
points = PoolVector2Array( 24, 40, 64, 40, 64, 64, 24, 64 )

[sub_resource type="NavigationPolygon" id=31]
vertices = PoolVector2Array( 64, 32, 64, 32, 24, 32, 24, 40, 64, 40 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ) ]

[sub_resource type="ConvexPolygonShape2D" id=104]
points = PoolVector2Array( 0, 8, 64, 8, 64, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=105]
points = PoolVector2Array( 0, 40, 64, 40, 64, 56, 0, 56 )

[sub_resource type="ConvexPolygonShape2D" id=106]
points = PoolVector2Array( 0, 32, 24, 32, 24, 40, 0, 40 )

[sub_resource type="NavigationPolygon" id=32]
vertices = PoolVector2Array( 24, 0, 24, 0, 32, 0, 32, 40, 24, 40 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ) ]

[sub_resource type="ConvexPolygonShape2D" id=107]
points = PoolVector2Array( 24, 64, 0, 64, 0, 0, 24, 0 )

[sub_resource type="ConvexPolygonShape2D" id=108]
points = PoolVector2Array( 64, 64, 32, 64, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=109]
points = PoolVector2Array( 32, 64, 24, 64, 24, 40, 32, 40 )

[sub_resource type="ConvexPolygonShape2D" id=58]
points = PoolVector2Array( 0, 0, 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="NavigationPolygon" id=64]
vertices = PoolVector2Array( 24, 0, 24, 0, 24, 32, 0, 32, 0, 40, 24, 40, 24, 64, 32, 64, 32, 40, 32, 40, 32, 24, 32, 24, 32, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ) ]

[sub_resource type="ConvexPolygonShape2D" id=76]
points = PoolVector2Array( 64, 64, 32, 64, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=77]
points = PoolVector2Array( 0, 0, 24, 0, 24, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=78]
points = PoolVector2Array( 0, 40, 24, 40, 24, 64, 0, 64 )

[sub_resource type="NavigationPolygon" id=39]
vertices = PoolVector2Array( 0, 32, 16, 32, 32, 32, 32, 64, 32, 64, 24, 64, 24, 40, 0, 40 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7 ) ]

[sub_resource type="ConvexPolygonShape2D" id=79]
points = PoolVector2Array( 0, 40, 24, 40, 24, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=80]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=81]
points = PoolVector2Array( 64, 64, 32, 64, 32, 32, 64, 32 )

[sub_resource type="NavigationPolygon" id=65]
vertices = PoolVector2Array( 24, 0, 24, 0, 24, 32, 0, 32, 0, 40, 24, 40, 64, 40, 64, 32, 32, 32, 32, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ) ]

[sub_resource type="ConvexPolygonShape2D" id=49]
points = PoolVector2Array( 64, 40, 64, 64, 0, 64, 0, 40, 0, 40 )

[sub_resource type="ConvexPolygonShape2D" id=82]
points = PoolVector2Array( 64, 32, 32, 32, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=83]
points = PoolVector2Array( 0, 0, 24, 0, 24, 32, 0, 32 )

[sub_resource type="NavigationPolygon" id=24]
vertices = PoolVector2Array( 0, 32, 0, 32, 64, 32, 64, 40, 0, 40 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ) ]

[sub_resource type="ConvexPolygonShape2D" id=84]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=85]
points = PoolVector2Array( 64, 64, 0, 64, 0, 40, 64, 40 )

[sub_resource type="NavigationPolygon" id=67]
vertices = PoolVector2Array( 24, 0, 24, 0, 32, 0, 32, 40, 0, 40, 0, 32, 24, 32 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6 ) ]

[sub_resource type="ConvexPolygonShape2D" id=86]
points = PoolVector2Array( 64, 64, 32, 64, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=87]
points = PoolVector2Array( 32, 64, 0, 64, 0, 40, 32, 40 )

[sub_resource type="ConvexPolygonShape2D" id=88]
points = PoolVector2Array( 24, 32, 0, 32, 0, 0, 24, 0 )

[sub_resource type="NavigationPolygon" id=26]
vertices = PoolVector2Array( 0, 32, 0, 32, 40, 32, 40, 40, 0, 40 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ) ]

[sub_resource type="ConvexPolygonShape2D" id=89]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=90]
points = PoolVector2Array( 64, 64, 0, 64, 0, 40, 64, 40 )

[sub_resource type="NavigationPolygon" id=68]
vertices = PoolVector2Array( 24, 0, 24, 0, 24, 64, 24, 64, 32, 64, 32, 40, 64, 40, 64, 32, 32, 32, 32, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ) ]

[sub_resource type="ConvexPolygonShape2D" id=91]
points = PoolVector2Array( 24, 64, 0, 64, 0, 0, 24, 0 )

[sub_resource type="ConvexPolygonShape2D" id=92]
points = PoolVector2Array( 64, 32, 32, 32, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=93]
points = PoolVector2Array( 64, 64, 32, 64, 32, 40, 64, 40 )

[sub_resource type="NavigationPolygon" id=66]
vertices = PoolVector2Array( 64, 32, 64, 32, 24, 32, 24, 64, 32, 64, 32, 40, 64, 40 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6 ) ]

[sub_resource type="ConvexPolygonShape2D" id=110]
points = PoolVector2Array( 64, 64, 32, 64, 32, 40, 64, 40 )

[sub_resource type="ConvexPolygonShape2D" id=111]
points = PoolVector2Array( 0, 0, 24, 0, 24, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=112]
points = PoolVector2Array( 64, 32, 24, 32, 24, 0, 64, 0 )

[sub_resource type="GDScript" id=19]

[sub_resource type="TileSet" id=1]
0/name = "road-tiles.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 63 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 69 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 69 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 70 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 71 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 72 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "road-tiles.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 37 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 73 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 73 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 74 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 75 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "road-tiles.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/navigation = SubResource( 64 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 76 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 76 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 77 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 78 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "road-tiles.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/navigation = SubResource( 39 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 79 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 79 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 80 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 81 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "road-tiles.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 256, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/navigation = SubResource( 65 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 49 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 49 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 82 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 83 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "road-tiles.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 320, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/navigation = SubResource( 24 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 84 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 84 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 85 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "road-tiles.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 384, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/navigation = SubResource( 67 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 86 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 86 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 87 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 88 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "road-tiles.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 448, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/navigation = SubResource( 26 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 89 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 89 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 90 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "road-tiles.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 512, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/navigation = SubResource( 68 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 91 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 91 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 92 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 93 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "road-tiles.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 64, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/navigation = SubResource( 66 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 110 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 110 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 111 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 112 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "road-tiles.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 64, 64, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/navigation = SubResource( 45 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 94 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 94 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 95 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "road-tiles.png 11"
11/texture = ExtResource( 2 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 128, 64, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/navigation = SubResource( 29 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 96 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 96 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 97 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 98 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 99 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 100 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "road-tiles.png 12"
12/texture = ExtResource( 2 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 192, 64, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/navigation = SubResource( 41 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 101 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 101 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 102 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 103 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "road-tiles.png 13"
13/texture = ExtResource( 2 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 256, 64, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/navigation = SubResource( 31 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape = SubResource( 104 )
13/shape_one_way = false
13/shape_one_way_margin = 1.0
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 104 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 105 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 106 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0
14/name = "road-tiles.png 14"
14/texture = ExtResource( 2 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 320, 64, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/navigation = SubResource( 32 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape = SubResource( 107 )
14/shape_one_way = false
14/shape_one_way_margin = 1.0
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 107 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 108 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 109 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "road-tiles.png 15"
15/texture = ExtResource( 2 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 384, 64, 64, 64 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape = SubResource( 58 )
15/shape_one_way = false
15/shape_one_way_margin = 1.0
15/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 58 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
15/z_index = 0
script = SubResource( 19 )

[node name="Maze" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Line2D" type="Line2D" parent="."]
z_index = 5
z_as_relative = false
default_color = Color( 0, 0.0156863, 1, 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation2D"]
tile_set = SubResource( 1 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1

[node name="StartPosition" type="Position2D" parent="."]

[node name="StartFlag" type="Sprite" parent="StartPosition"]
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="EndPosition" type="Position2D" parent="."]

[node name="FinishFlag" type="Sprite" parent="EndPosition"]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="SpaceInvader" parent="." instance=ExtResource( 5 )]
